force-app/main/default/objects/Survey_Plan_Detail__c/Survey_Plan_Detail__c.object-meta.xml
<CustomObject>
    <label>Survey Plan Detail</label>
    <nameField>
        <label>Survel Plan Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Plan Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>