force-app/main/default/objects/Survey_Plan_Detail__c/fields/Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Id__c</fullName>
    <label>Event_Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>