force-app/main/default/objects/Survey_Plan_Detail__c/fields/Loan_Information__c.field-meta.xml
<CustomField>
    <fullName>Loan_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Information</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Survey Plan Details</relationshipLabel>
    <relationshipName>Survey_Plan_Details</relationshipName>
    <type>Lookup</type>
</CustomField>