force-app/main/default/objects/Survey_Plan_Detail__c/fields/Survey_Cancel_Reason__c.field-meta.xml
<CustomField>
    <fullName>Survey_Cancel_Reason__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Cancel Reason</label>
    <referenceTo>Survey_Cancel_Reason__c</referenceTo>
    <relationshipLabel>Survey Plan Details</relationshipLabel>
    <relationshipName>Survey_Plan_Details</relationshipName>
    <type>Lookup</type>
</CustomField>